--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "moonshine/moonshine": "^2.0",
-        "spatie/laravel-permission": "^6.10",
-        "sweet1s/moonshine-roles-permissions": "^2.3"
+        "moonshine/moonshine": "^2",
+        "moonshine/permissions": "1.0.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
