--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Mdynf4gfD/H1HBsJAPaHCq9V3DSpEZWbnwCXL6n5ZN4=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
@@ -24,9 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ssetp3
+DB_DATABASE=proyecto
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
