--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "moonshine/moonshine": "^2",
-        "moonshine/permissions": "1.0.2"
+        "sweet1s/moonshine-roles-permissions": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
